Styling: aligned bottom right last slide on name. Fixes #7.

--- a/src/Presentation/Presentation.css
+++ b/src/Presentation/Presentation.css
@@ -32,4 +32,15 @@ a {
   color: yellow;
 }
 
+.position-relative {
+  position: relative;
+}
+.bottom-right {
+  position: absolute;
+  top: 30%;
+  right: 40%;
+}
+
+
+
 
